# grass_drone_ros2

./: .gitignore  ReadMe.md
src/communication_telemetry/: package.xml  setup.cfg  setup.py
src/communication_telemetry/communication_telemetry/: telemetry_client.py  telemetry_server.py
src/grass_drone_bringup/: CMakeLists.txt  package.xml
src/grass_drone_bringup/config/: ros_gz_drone_bridge.yaml
src/grass_drone_bringup/launch/: Aruco_takeoff.launch.py  gazebo.launch.py
src/grass_drone_camera/: package.xml  setup.cfg  setup.py
src/grass_drone_camera/grass_drone_camera/: aruco_detection.py  camera_calibration.py  get_images.py  send_images.py  simple_aruco.py
src/grass_drone_control_msgs/: CMakeLists.txt  package.xml
src/grass_drone_control_msgs/msg/: AngleCommand.msg  ChannelCommand.msg
src/grass_drone_description/: CMakeLists.txt  package.xml
src/grass_drone_fc_protocols/: package.xml  setup.cfg  setup.py
src/grass_drone_fc_protocols/grass_drone_fc_protocols/: ibus_sender_node.py
src/grass_drone_flight_controller/: package.xml  setup.cfg  setup.py
src/grass_drone_flight_controller/grass_drone_flight_controller/: flight_controller_node.py
src/grass_drone_gazebo/: CMakeLists.txt  package.xml
src/grass_drone_gazebo/worlds/: ArucoWorld_takeoff.sdf  quadcopter.sdf
src/grass_drone_gazebo/worlds/models/: Arucoo.dae  calib.io_checker_200x200_9x12_15(1).exr  calibration_board.dae
src/grass_drone_manual_control/: package.xml  setup.cfg  setup.py
src/grass_drone_manual_control/grass_drone_manual_control/: manual_control_node.py  pid_controller.py
src/grass_drone_telemetry_client/: package.xml  setup.cfg  setup.py
src/grass_drone_telemetry_client/grass_drone_telemetry_client/: telemetry_client.py
src/ground_station_joy_controller/: package.xml  setup.cfg  setup.py
src/ground_station_joy_controller/ground_station_joy_controller/: joy_controller_node.py  joy_reader_mac_m1_node.py
src/ground_station_telemetry_server/: package.xml  setup.cfg  setup.py
(+2 files in other folders)
